# jakebarnes

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  jakebarnes.service
assets/css/: default.css  kf.css  nav.css
public/css/: ds2sm.css  home.css  kf.css  kf2.css  nav.css  pd2.css  pokemon.css  twenty.css
public/files/: emerald-hcnl-v1.bps  firered-hcnl-v1.ips  firered-hcnl-v1a.ips  firered-hcnl-v1b.bps  firered-hcnl-v1c.bps  heartgold-hcnl-v1.bps  heartgold-hcnl-v1a.bps  leafgreen-hcnl-v1c.bps  publickey.me@jakebarn.es.asc  ruby-hcnl-v1.bps  sapphire-hcnl-v1.bps  soulsilver-hcnl-v1.bps  soulsilver-hcnl-v1a.bps
public/js/: ds2sm.min.js  kf.js  kf2.js  pd2.js  twenty.js
public/kf/: data.json  maps.json
public/kf2/: data.json  tables.json
public/pattomobile/: index.html  pattomobile-online.swf
public/pattomobile/TemplateData/: UnityProgress.js  style.css
public/pd2/: data.json
src/: home.rs  main.rs  paypal.rs  steam.rs  vipaccess.rs
templates/: ds2sm.html.hbs  ds2sm_embed.html.hbs  home.html.hbs  kf.html.hbs  kf2.html.hbs  pattomobile.html.hbs  paypal.html.hbs  pd2.html.hbs  pokemon.html.hbs  twenty.html.hbs  vipaccess.html.hbs
templates/components/: asset-css.html.hbs  asset-js.html.hbs  permalink.html.hbs
templates/layouts/: default.html.hbs  embed.html.hbs
tools/: kf-update.js  kf2-update.js  package.json  pd2-update.js
