[package]
name = "jakebarnes"
version = "0.1.0"
authors = ["Jake Barnes <me@jakebarn.es>"]
edition = "2018"

[dependencies]
base64 = "^0.13.0"
chrono = "^0.4.19"
dotenv = "^0.15.0"
futures = "^0.3.14"
reqwest = { version = "^0.11.3", features = ["stream"] }
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
thiserror = "^1.0.24"
tokio = { version = "^1.5.0", features = ["process"] }
tokio-util = { version = "^0.6.6", features = ["compat"] }
url = "^2.2.1"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "3a7559edcec7c443e68e22e038aaa2d90ef27c23"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "3a7559edcec7c443e68e22e038aaa2d90ef27c23"
default-features = false
features = ["handlebars_templates", "serve"]
