[package]
name = "jakebarnes"
version = "0.1.0"
authors = ["Jake Barnes <me@jakebarn.es>"]
edition = "2018"

[dependencies]
base64 = "^0.13.0"
chrono = "^0.4.19"
dotenv = "^0.15.0"
futures = "^0.3.21"
reqwest = { version = "^0.11.10", features = ["stream"] }
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.81"
thiserror = "^1.0.31"
tokio = { version = "^1.19.2", features = ["process"] }
tokio-util = { version = "^0.7.3", features = ["compat"] }
url = "^2.2.2"
