[package]
name = "jakebarnes"
version = "0.1.0"
authors = ["Jake Barnes <me@jakebarn.es>"]
edition = "2018"

[dependencies]
base64 = "^0.22.0"
chrono = "^0.4.37"
dotenv = "^0.15.0"
futures = "^0.3.30"
reqwest = { version = "^0.12.2", features = ["stream"] }
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.115"
thiserror = "^1.0.58"
tokio = { version = "^1.37.0", features = ["process"] }
tokio-util = { version = "^0.7.10", features = ["compat"] }
url = "^2.5.0"
